# xblanker

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.in  version-files
man/: Makefile  xblanker.1
src/: Makefile.am  project.h  version.c  xblanker.c
